# slate

./: .gitignore  .kitsune2_bootstrap_srv  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
dnas/griffy/workdir/: dna.yaml
dnas/griffy/zomes/integrity/file_storage/: Cargo.toml
dnas/slate/workdir/: dna.yaml
dnas/slate/zomes/coordinator/file_storage/: Cargo.toml
dnas/slate/zomes/coordinator/profiles/: Cargo.toml
dnas/slate/zomes/coordinator/syn/: Cargo.toml
dnas/slate/zomes/integrity/file_storage/: Cargo.toml
dnas/slate/zomes/integrity/profiles/: Cargo.toml
dnas/slate/zomes/integrity/syn/: Cargo.toml
ui/: index.html  package.json  vite.config.ts
ui/src/: AboutDialog.svelte  App.svelte  AttachmentsBind.svelte  AttachmentsDialog.svelte  AttachmentsList.svelte  Avatar.svelte  BoardEditor.svelte  BoardMenu.svelte  BoardMenuItem.svelte  Controller.svelte  ControllerBlockActiveBoards.svelte  ControllerBoard.svelte  ControllerCreate.svelte  EditBoardDialog.svelte  Folk.svelte  GriffyPane.svelte  GroupParticipants.svelte  LabelSelector.svelte  NewBoardDialog.svelte  Search.svelte  SlatePane.svelte  Toolbar.svelte  board.ts  boardList.ts  export.ts  index.js  store.ts  svgIcons.ts  util.ts  we.ts
ui/src/icons/: LogoIcon.svelte
we_dev/: config.json  config.ts
workdir/: happ.yaml  web-happ.yaml
