[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.7.0"
hdk = "0.6.0"
serde = "1.0.193"
holochain = "0.6.0"

#[workspace.dependencies.slate]
#path = "dnas/slate/zomes/coordinator/slate"

#[workspace.dependencies.slate_integrity]
#path = "dnas/slate/zomes/integrity/slate"

[workspace.dependencies.profiles]
path = "dnas/slate/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/slate/zomes/integrity/profiles"

[workspace.dependencies.file_storage]
path = "dnas/slate/zomes/coordinator/file_storage"

[workspace.dependencies.file_storage_integrity]
path = "dnas/slate/zomes/integrity/file_storage"
